@@ -992,6 +992,14 @@ No settings are defined for this Writer.
 [buildhtml application]
 ```````````````````````
 
+_`ignore`
+    List of wildcard (shell globing) patterns to silently ignore.  To
+    specify multiple patterns in configuration files, use
+    colon-separated patterns; on the command line, the option may be
+    used more than once.
+
+    Default: ['.svn', 'CVS'].  Options: ``--ignore``.
+
 _`prune`
     List of directories not to process.  To specify multiple
     directories in configuration files, use colon-separated paths; on
